--- a/3DForge/ClientApp/src/components/NavigationHeader/.module.css
+++ b/3DForge/ClientApp/src/components/NavigationHeader/.module.css
@@ -1,3 +1,210 @@
+.nav_header {
+    position: relative;
+    height: 100px;
+}
+
 .logo {
+    position: relative;
+    position: absolute;
+    left: 30px;
+    top: 50%;
+    transform: translateY(-50%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: fit-content;
+}
+
+.logo_img {
+    cursor: pointer;
     content: url(./img/logo.png);
+    width: 70px;
+}
+
+.logo_text {
+    cursor: pointer;
+    color: white;
+    font-size: 40px;
+    margin-left: 20px;
+}
+
+.page_list {
+    position: absolute;
+    display: flex;
+    left: 40%;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.page {
+    color: white;
+    font-size: 25px;
+    text-decoration: underline;
+    text-underline-offset: 8px;
+    text-decoration-thickness: 3px;
+}
+
+.page:not(.page:first-child) {
+    margin-left: 50px;
+}
+
+.account_options {
+    position: relative;
+    position: absolute;
+    right: 0;
+    height: 100%;
+}
+
+.theme_editor {
+    position: relative;
+    position: absolute;
+    left: -400px;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 120px;
+    height: 50px;
+}
+
+.switch {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 2px solid #C99E22;
+    border-radius: 34px;
+    position: relative;
+    display: inline-block;
+    width: 44.844px;
+    height: 25.313px;
+}
+
+.switch_checkbox {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.switch_slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #cccccc00;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.switch_slider:before {
+    position: absolute;
+    content: "";
+    height: 19px;
+    width: 19px;
+    left: 2.5px;
+    bottom: 3.7px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+    border-radius: 50%;
+}
+
+.switch_checkbox:checked + .switch_slider {
+    background-color: #2195f300;
+}
+
+.switch_checkbox:checked + .switch_slider:before {
+    -webkit-transform: translateX(19.7px);
+    -ms-transform: translateX(19.7px);
+    transform: translateX(19.7px);
+}
+
+.light_theme {
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    content: url(./img/light-theme.png);
+    max-width: 30px;
+}
+
+.dark_theme {
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    content: url(./img/dark-theme.png);
+    max-width: 30px;
+}
+
+.shop {
+    position: absolute;
+    left: -230px;
+    top: 50%;
+    transform: translateY(-50%);
+    max-width: 40px;
+    content: url(./img/shop.png);
+}
+
+.avatar {
+    cursor: pointer;
+    position: absolute;
+    left: -145px;
+    top: 50%;
+    transform: translateY(-50%);
+    border: 2px solid white;
+    border-radius: 50%;
+    max-width: 60px;
+    max-height: 60px;
+    background-color: black;
+    content: url(./img/no-avatar.png);
+}
+
+.drop_menu {
+    position: absolute;
+    left: -70px;
+    top: 50%;
+    transform: translateY(-50%);
+    max-width: 40px;
+    content: url(./img/down-arrow.png);
+}
+
+.login {
+    position: absolute;
+    left: -260px;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    border: 0;
+    width: fit-content;
+    height: 40px;
+    border-radius: 10px;
+    font-size: 21px;
+    background: #C99E22;
+    letter-spacing: 1px;
+    padding-inline: 5px;
+}
+
+.register {
+    position: absolute;
+    left: -170px;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    border: 0;
+    width: fit-content;
+    height: 40px;
+    border-radius: 10px;
+    font-size: 21px;
+    background: #C99E22;
+    letter-spacing: 1px;
+    padding-inline: 5px;
 }
