Update for user info page
* improved AccountPageLayout;
* finished user info page;
* front-end API fixes;
* back-end fixes;
* other fixes and improvements.

--- a/3DForge/ClientApp/src/components/AccountPageLayout/.module.css
+++ b/3DForge/ClientApp/src/components/AccountPageLayout/.module.css
@@ -323,6 +323,10 @@
     padding: 5px;
 }
 
+.subscribe_button:hover {
+    border: 1.5px solid #C99E22;
+}
+
 .subscribe_button_img {
     content: url(./img/email.png);
 }
