--- a/3DForge/ClientApp/src/components/AccountPageLayout/.module.css
+++ b/3DForge/ClientApp/src/components/AccountPageLayout/.module.css
@@ -172,6 +172,17 @@
     height: 100%;
 }
 
+.drop_menu_triangle {
+    position: absolute;
+    top: -18px;
+    left: 132px;
+    border-color: transparent transparent #C99E22 transparent;
+    border-style: solid;
+    border-width: 0px 18px 18px 18px;
+    height: 0px;
+    width: 0px;
+}
+
 .drop_menu_img {
     position: absolute;
     top: 50%;
@@ -225,6 +236,10 @@
     padding-inline: 5px;
 }
 
+.login:hover {
+    background-color: #9b7b1c;
+}
+
 .register {
     position: absolute;
     left: -170px;
@@ -243,6 +258,10 @@
     background: #C99E22;
     letter-spacing: 1px;
     padding-inline: 5px;
+}
+
+.register:hover {
+    background-color: #9b7b1c;
 }
 
 .loading {
