--- a/3DForge/ClientApp/src/index.css
+++ b/3DForge/ClientApp/src/index.css
@@ -3,3 +3,20 @@
     padding: 0px;
     font-family: 'Robotic', sans-serif;
 }
+
+body {
+    overflow-y: scroll;
+}
+
+body::-webkit-scrollbar {
+    width: 12px;
+}
+
+body::-webkit-scrollbar-track {
+    background: rgb(247, 0, 255);
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: blue;
+    border-radius: 20px;
+}
