--- a/3DForge/ClientApp/src/pages/UserInfoPage/.module.css
+++ b/3DForge/ClientApp/src/pages/UserInfoPage/.module.css
@@ -69,6 +69,10 @@
     padding-inline: 20px;
 }
 
+.log_out_button:hover {
+    background-color: #9b7b1c;
+}
+
 .log_out_button_text {
     color: white;
     font-size: 25px;
@@ -85,7 +89,7 @@
     color: white;
     font-size: 30px;
     text-decoration: underline;
-    text-underline-offset: 5px;
+    text-underline-offset: 8px;
     letter-spacing: 1px;
 }
 
@@ -102,7 +106,7 @@
     color: white;
     font-size: 30px;
     text-decoration: underline;
-    text-underline-offset: 5px;
+    text-underline-offset: 8px;
     letter-spacing: 1px;
 }
 
