Front-end update
Front-end:
    * implemented opportunity to reset a user's password by sending an email message with a link that leads to the page where the user can make a new password for his account;
    * added page for reseting a user's password if the user has the link with the token;
    * added 2 function in user API for interaction with http requests;
    * front-end small fixes and improvements.
Back-end:
    * added 2 functions in user API to process http requests connected with password resetting;
    * changes for DataCleaner class;
    * small code improvement.
Attention:
    * page for editing user profile is unfinished.

--- a/3DForge/ClientApp/src/components/AccountPageLayout/.module.css
+++ b/3DForge/ClientApp/src/components/AccountPageLayout/.module.css
@@ -4,6 +4,7 @@
 }
 
 .logo {
+    cursor: pointer;
     position: relative;
     position: absolute;
     left: 30px;
@@ -16,13 +17,11 @@
 }
 
 .logo_img {
-    cursor: pointer;
     content: url(./img/logo.png);
     width: 70px;
 }
 
 .logo_text {
-    cursor: pointer;
     color: white;
     font-size: 40px;
     margin-left: 20px;
@@ -161,6 +160,26 @@
 }
 
 .avatar:hover {
+    border-radius: 10px;
+}
+
+.loading_avatar {
+    cursor: pointer;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    left: -145px;
+    top: 50%;
+    transform: translateY(-50%);
+    border: 2px solid white;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    transition: 0.1s;
+}
+
+.loading_avatar:hover {
     border-radius: 10px;
 }
 
