--- a/3DForge/ClientApp/src/pages/UserInfoPage/.module.css
+++ b/3DForge/ClientApp/src/pages/UserInfoPage/.module.css
@@ -29,23 +29,23 @@
 
 .login_email_country_city {
     position: absolute;
-    top: 455px;
+    top: 495px;
     transform: translateY(-50%);
     width: 100%;
 }
 
 .login {
     text-align: center;
-    font-size: 30px;
+    font-size: 32px;
     font-weight: 600;
 }
 
 .email {
     color: #3E86F0;
     text-align: center;
-    font-size: 20px;
+    font-size: 22px;
     font-weight: 600;
-    margin-block: 10px;
+    margin-block: 30px;
 }
 
 .country_and_city {
@@ -57,7 +57,7 @@
 .log_out_button {
     cursor: pointer;
     position: absolute;
-    bottom: 10px;
+    bottom: 20px;
     left: 50%;
     transform: translateX(-50%);
     display: flex;
@@ -85,7 +85,7 @@
     padding: 2%;
 }
 
-.general_info_header {
+.section_header {
     color: white;
     font-size: 30px;
     text-decoration: underline;
@@ -93,30 +93,13 @@
     letter-spacing: 1px;
 }
 
-.general_info {
+.section {
     position: relative;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-row-gap: 30px;
     grid-column-gap: 3%;
-    margin-block: 30px;
-}
-
-.address_header {
-    color: white;
-    font-size: 30px;
-    text-decoration: underline;
-    text-underline-offset: 8px;
-    letter-spacing: 1px;
-}
-
-.address {
-    position: relative;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-row-gap: 30px;
-    grid-column-gap: 3%;
-    margin-top: 30px;
+    margin-block: 30px; 
 }
 
 .info_field {
@@ -129,7 +112,7 @@
 }
 
 .info_field_street {
-    grid-column: span 2;
+    grid-column: span 3;
 }
 
 .info_field_header {
