--- a/3DForge/ClientApp/src/pages/UserInfoPage/.module.css
+++ b/3DForge/ClientApp/src/pages/UserInfoPage/.module.css
@@ -27,25 +27,32 @@
     border-radius: 20px;
 }
 
+.avatar_unloaded {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 344px;
+}
+
 .login_email_country_city {
     position: absolute;
-    top: 495px;
+    top: 455px;
     transform: translateY(-50%);
     width: 100%;
 }
 
 .login {
     text-align: center;
-    font-size: 32px;
+    font-size: 30px;
     font-weight: 600;
 }
 
 .email {
     color: #3E86F0;
     text-align: center;
-    font-size: 22px;
+    font-size: 20px;
     font-weight: 600;
-    margin-block: 30px;
+    margin-block: 10px;
 }
 
 .country_and_city {
@@ -112,7 +119,7 @@
 }
 
 .info_field_street {
-    grid-column: span 3;
+    grid-column: span 2;
 }
 
 .info_field_header {
