--- a/3DForge/ClientApp/src/components/AccountPageLayout/.module.css
+++ b/3DForge/ClientApp/src/components/AccountPageLayout/.module.css
@@ -36,11 +36,16 @@
 }
 
 .page {
+    cursor: pointer;
     color: white;
     font-size: 25px;
     text-decoration: underline;
     text-underline-offset: 8px;
     text-decoration-thickness: 3px;
+}
+
+.page:hover {
+    color: yellow;
 }
 
 .page:not(.page:first-child) {
