--- a/3DForge/ClientApp/src/pages/ModelPage/.module.css
+++ b/3DForge/ClientApp/src/pages/ModelPage/.module.css
@@ -5,27 +5,50 @@
     justify-content: center;
     width: 100%;
 }
-.button_group {
-    position: absolute;
+.keywords_group {
+    position: relative;
     left: 100px;
-    top: 800px;
-    display: flex; /* Зробіть контейнер гнучким (flex) */
-    width:550px;
+    top: 600px;
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 550px; /* або інший розмір, якщо ви хочете обмежити ширину */
+    width: 100%; /* Важливо встановити ширину відсотком або іншою відносною величиною */
+    margin-bottom: 10px; /* Додає пробіл між рядками */
 }
-
-.categories_buttons {
+.categories_group {
+    position: relative;
+    left: 100px;
+    top: 700px;
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 550px; /* або інший розмір, якщо ви хочете обмежити ширину */
+    width: 550px;
+}
+.keywords_buttons {
     margin-right: 100px;
     background: #FFC300;
     height: 60px;
     width: 150px;
-    font-size: 48px;
+    font-size: 24px;
     border-radius: 10px; /* Додайте закругленість */
     font-family: "Montserrat", Helvetica; /* Замініть 'Your Cool Font' на обраний вами шрифт */
+    margin-bottom: 10px; /* Додає пробіл між рядками */
+}
+.categories_buttons {
+    margin-right: 100px;
+    background: #FF00FB;
+    height: 60px;
+    width: 150px;
+    font-size: 24px;
+    border-radius: 10px; /* Додайте закругленість */
+    font-family: "Montserrat", Helvetica; /* Замініть 'Your Cool Font' на обраний вами шрифт */
+    top: 100px;
+    margin-bottom: 10px; /* Додає пробіл між рядками */
 }
 .div_2 {
     background: linear-gradient( 180deg, rgb(123.72, 38.05, 191.04) 0%, rgb(186, 103, 211) 99.99%, rgb(111.92, 48, 181) 100% );
     background-color: rgba(255, 255, 255, 1);
-    height: 4939px;
+    height: 4439px;
     position: relative;
     width: 100%;
 }
@@ -36,7 +59,7 @@
     gap: 17px;
     left: 100px;
     position: relative;
-    top: 66px;
+    top: 50px;
 }
 
 .image {
@@ -338,8 +361,8 @@
     background-size: 100% 100%;
     height: 81px;
     left: 50px;
-    position: absolute;
-    top: 236px;
+    position: relative;
+    top: 36px;
     width: 1423px;
 }
 
@@ -378,8 +401,8 @@
     border-radius: 10px;
     height: 1186px;
     left: 50px;
-    position: absolute;
-    top: 347px;
+    position: relative;
+    top: 100px;
     width: 1423px;
 }
 
@@ -1047,8 +1070,8 @@
 .view_14 {
     height: 411px;
     left: 50px;
-    position: absolute;
-    top: 1563px;
+    position: relative;
+    top: 133px;
     width: 100%;
 }
 
@@ -1090,8 +1113,8 @@
 .view_15 {
     height: 881px;
     left: 50px;
-    position: absolute;
-    top: 2004px;
+    position: relative;
+    top: 163px;
     width: 1753px;
 }
 
@@ -1288,8 +1311,8 @@
 .overlap_7 {
     height: 1615px;
     left: 50px;
-    position: absolute;
-    top: 2915px;
+    position: relative;
+    top: 205px;
     width: 1427px;
 }
 
