--- a/3DForge/ClientApp/src/pages/ModelPage/.module.css
+++ b/3DForge/ClientApp/src/pages/ModelPage/.module.css
@@ -939,15 +939,32 @@
     width: 156px;
     content: url(img/5_star.png)
 }
+.box_image {
+    height: 58px;
+    left: -200px;
+    position: relative;
+    top: 202px;
+    width: 227px;
+    content: url(img/cube-image.svg)
+}
+.edit_image {
+    height: 48px;
+    left: -192px;
+    position: relative;
+    top: 232px;
+    width: 210px;
+    content: url(img/edit-icon.svg)
+}
 .group_13 {
     height: 58px;
     left: 710px;
-    position: absolute;
-    top: 202px;
+    position: relative;
+    top: -50px;
     width: 227px;
 }
 
 .overlap_4 {
+
     background-color: #e9e9e9;
     border-radius: 20px;
     height: 58px;
@@ -969,7 +986,7 @@
 }
 
 .view_13 {
-    background-color: #c99d22;
+    background-color: #33FF66;
     border-radius: 50px;
     height: 30px;
     left: 13px;
